Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4587

Flight C++ DoPut segfaults

    XMLWordPrintableJSON

Details

    Description

      After Wes fixed the undefined behavior, it turns out the implementation of DoPut on the client side is now wrong. It should construct an IpcPayload instead of going through the underlying Protobuf.

      Additionally, a previous patch accidentally exposed arrow::ipc::DictionaryMemo under arrow::DictionaryMemo.

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 10m
                  2h 10m