ARROW-4587: [C++] Fix segfaults around DoPut implementation

Also fixes exposing `arrow::ipc::DictionaryMemo` as `arrow::DictionaryMemo`.

Author: David Li <David.M.Li@twosigma.com>

Closes #3660 from lihalite/fix-flight-c++ and squashes the following commits:

e670cb11c <David Li> Fix segfaults around DoPut implementation