cpp/src/arrow/flight/customize_protobuf.h
@@ -20,7 +20,7 @@
 #include <limits>
 #include <memory>
 
-#include "grpcpp/impl/codegen/config_protobuf.h"
+#include <grpcpp/impl/codegen/config_protobuf.h>
 
 // It is necessary to undefined this macro so that the protobuf
 // SerializationTraits specialization is not declared in proto_utils.h. We've
@@ -29,20 +29,13 @@
 // for our faster serialization-deserialization path
 #undef GRPC_OPEN_SOURCE_PROTO
 
-#include "grpcpp/impl/codegen/proto_utils.h"
+#include <grpcpp/impl/codegen/proto_utils.h>
 
 namespace arrow {
-namespace ipc {
-namespace internal {
-
-struct IpcPayload;
-
-}  // namespace internal
-}  // namespace ipc
-
 namespace flight {
 
 struct FlightData;
+struct FlightPayload;
 
 namespace protocol {
 
@@ -55,12 +48,12 @@ class FlightData;
 namespace grpc {
 
 using arrow::flight::FlightData;
-using arrow::ipc::internal::IpcPayload;
+using arrow::flight::FlightPayload;
 
 class ByteBuffer;
 class Status;
 
-Status FlightDataSerialize(const IpcPayload& msg, ByteBuffer* out, bool* own_buffer);
+Status FlightDataSerialize(const FlightPayload& msg, ByteBuffer* out, bool* own_buffer);
 Status FlightDataDeserialize(ByteBuffer* buffer, FlightData* out);
 
 // This class provides a protobuf serializer. It translates between protobuf
@@ -88,7 +81,7 @@ class SerializationTraits<T, typename std::enable_if<std::is_same<
  public:
   static Status Serialize(const grpc::protobuf::Message& msg, ByteBuffer* bb,
                           bool* own_buffer) {
-    return FlightDataSerialize(*reinterpret_cast<const IpcPayload*>(&msg), bb,
+    return FlightDataSerialize(*reinterpret_cast<const FlightPayload*>(&msg), bb,
                                own_buffer);
   }
 
